--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@
     margin-right: 40px;
 }
 
+::marker {
+    display: none;
+}
+
 #loan-section {
     background: url(https://www.feeta.pk/blog/wp-content/uploads/2021/05/loan-cash.jpg) no-repeat;
     background-position: center;
@@ -46,11 +50,14 @@
     font-size: 30px;
 }
 
+#form-section {
+    width: 100%;
+}
+
 .needs-validation {
+    border: 1px solid brown;
     align-items: center;
     align-content: center;
-    margin-left: 130px;
-    margin-right: 130px;
     background-color: grey;
 }
 
@@ -70,12 +77,94 @@
 }
 
 .input-group .form-control {
-    height: 15px;
+    height: 25px;
     padding: 2px 4px;
+}
+
+input[type="text"], select {
+    width: 50%;
+    height: 40px;
+    padding: 10px;
 }
 
 a:-webkit-any-link {
     text-decoration: none;
+}
+
+#about-section {
+    background-color: aqua;
+    min-height: 100vh;
+}
+
+#about-section .about-section h1 {
+    text-align: center;
+    padding-top: 30px;
+    margin-bottom: 20px;
+    font-size: 58px;
+    text-decoration: underline;
+}
+
+#about-section .about-section p {
+    text-align: center;
+    margin-left: 210px;
+    margin-right: 120px;
+    width: 60%;
+    font-size: 30px;
+}
+
+#about-section .vision-section {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 80px;
+}
+#about-section .vision-section h2 {
+    font-size: 58px;
+    margin-bottom: 20px;
+    text-decoration: underline;
+}
+
+#about-section .vision-section p {
+    font-size: 25px;
+}
+
+#about-section .mission-section {
+    text-align: center;
+}
+
+#about-section .mission-section h3 {
+    font-size: 58px;
+    text-decoration: underline;
+}
+
+#about-section .mission-section p {
+    font-size: 25px;
+}
+
+#contact-section {
+    background: blueviolet;
+    min-height: 100vh;
+}
+
+#contact-section .row {
+    border: 3px solid white;
+    width: 100%;
+}
+
+#contact-section .button-section {
+    margin-left: 600px;
+    margin-bottom: 2px;
+}
+
+#contact-section .heading-section .heading {
+    text-align: center;
+    font-size: 58px;
+    margin-bottom: 30px;
+}
+
+#contact-section .heading-section .sub-heading {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 8px;
 }
 
 
@@ -95,8 +184,20 @@ a:-webkit-any-link {
         font-size: 35px;
     }
 
+    input[type="text"], select {
+        width: 30%;
+    }
+
     a:-webkit-any-link {
         text-decoration: none;
+    }
+
+    #about-section .about-section p {
+        margin-left: 145px;
+    }
+
+    #about-section .mission-section p {
+        margin-left: 105px;
     }
 }
 
@@ -125,9 +226,40 @@ a:-webkit-any-link {
         text-decoration: none;
         marker: none;
         font-size: 25px;
-    }    
+    }
+    
+    .container-fluid {
+        flex-direction: column;
+    }
+
+    .container-fluid .collapse {
+        flex-direction: column;
+    }
 
     a:-webkit-any-link {
         text-decoration: none;
+    }
+
+    .Heading h1 {
+        font-size: 28px;
+        width: 70%;
+    }
+
+    .Heading p {
+        font-size: 23px;
+        width: 70%; 
+    }
+
+    .invalid-feedback {
+        display: none;
+    }
+
+    #about-section .about-section p {
+        margin-left: 75px;
+    }
+
+    #about-section .mission-section p {
+        width: 80%;
+        margin-left: 55px;
     }
 }
