--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,20 @@
 .container-fluid {
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    padding-top: 15px;
     margin-bottom: 60px;
     background-color: yellow;
     font-size: 58px;
+    width: 100%;
+}
+
+.navbar-brand {
+    padding-top: 25px;
 }
 
 .navbar-nav {
     display: flex;
     list-style: none;
-}
-
-.navbar-nav {
     margin-right: 25px;
 }
 
@@ -213,12 +215,13 @@ a:-webkit-any-link {
 
     .navbar-brand {
         margin-left: 10px;
+        padding-top: 10px;
     }
 
     .navbar-nav {
         margin-left: 30px;
         text-decoration: none;
-        marker: none;
+        padding-top: 25px;
     }
 
     .nav-item, ul ul {
