--- a/css/style.css
+++ b/css/style.css
@@ -7,262 +7,82 @@
 .container-fluid {
     display: flex;
     justify-content: space-between;
-    padding-top: 15px;
-    margin-bottom: 60px;
-    background-color: yellow;
-    font-size: 58px;
-    width: 100%;
+    padding-top: 20px;
+    height: 100px;
+    background: yellowgreen;
 }
 
-.navbar-brand {
-    padding-top: 25px;
-}
-
-.navbar-nav {
+.navbar-nav, .nav-item {
     display: flex;
     list-style: none;
-    margin-right: 25px;
+    margin-right: 30px;
 }
 
-.nav-item {
-    margin-right: 40px;
-}
-
-::marker {
-    display: none;
-}
-
-#loan-section {
-    background: url(https://www.feeta.pk/blog/wp-content/uploads/2021/05/loan-cash.jpg) no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 600px;
-    margin-bottom: 25px;
-}
-
-.Heading {
-    text-align: center;
-}
-
-.Heading h1 {
-    font-size: 45px;
-}
-
-.Heading p {
-    font-size: 30px;
-}
-
-#form-section {
-    width: 100%;
-}
-
-.needs-validation {
-    border: 1px solid brown;
-    align-items: center;
-    align-content: center;
-    background-color: grey;
-}
-
-.col-md-4, .col-md-6, .col-md-3, .col-12 {
-    align-items: center;
-    align-content: center;
-    margin-left: 230px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    width: 100%;
-    font-size: 35px;
-}
-
-.btn-primary {
-    background-color: brown;
+.nav-link, .navbar-brand {
+    text-decoration: none;
     font-size: 38px;
 }
 
-.input-group .form-control {
-    height: 25px;
-    padding: 2px 4px;
-}
-
-input[type="text"], select {
-    width: 50%;
-    height: 40px;
-    padding: 10px;
-}
-
-a:-webkit-any-link {
-    text-decoration: none;
-}
-
-#about-section {
-    background-color: aqua;
-    min-height: 100vh;
-}
-
-#about-section .about-section h1 {
-    text-align: center;
-    padding-top: 30px;
-    margin-bottom: 20px;
-    font-size: 58px;
-    text-decoration: underline;
-}
-
-#about-section .about-section p {
-    text-align: center;
-    margin-left: 210px;
-    margin-right: 120px;
-    width: 60%;
-    font-size: 30px;
-}
-
-#about-section .vision-section {
-    text-align: center;
-    margin-top: 100px;
-    margin-bottom: 80px;
-}
-#about-section .vision-section h2 {
-    font-size: 58px;
-    margin-bottom: 20px;
-    text-decoration: underline;
-}
-
-#about-section .vision-section p {
+.col-md-6 p {
     font-size: 25px;
-}
-
-#about-section .mission-section {
     text-align: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
-#about-section .mission-section h3 {
+.col-md-6 h5 {
     font-size: 58px;
+}
+
+.col-md-6 img {
+    width: 80%;
+    height: 200px;
+}
+
+.col-md-6 {
+    margin-left: 70px;
+}
+
+.heading {
+    text-align: center;
+    padding-top: 20px;
+    font-size: 50px;
     text-decoration: underline;
 }
 
-#about-section .mission-section p {
-    font-size: 25px;
+.sub-heading {
+    text-align: center;
+    padding-top: 10px;
+    font-size: 30px; 
 }
 
-#contact-section {
+#contact-section .col-md-6, #contact-section .col-md-4, #contact-section .col-12 {
+    height: 30px;
+    text-align: center;
+    align-items: center;
+    margin-top: 30px;
     background: blueviolet;
-    min-height: 100vh;
+    font-size: 25px;
 }
 
-#contact-section .row {
-    border: 3px solid white;
-    width: 100%;
-}
-
-#contact-section .button-section {
-    margin-left: 600px;
-    margin-bottom: 2px;
-}
-
-#contact-section .heading-section .heading {
-    text-align: center;
-    font-size: 58px;
+#loan-section {
+    background-image: url(https://www.financialexpress.com/wp-content/uploads/2022/02/HOME-LOAN-HIKE1200X800.jpg);
+    height: 700px;
     margin-bottom: 30px;
 }
 
-#contact-section .heading-section .sub-heading {
-    text-align: center;
-    font-size: 20px;
-    margin-bottom: 8px;
+#landing-section input[type="text"], select, #landing-section input[type="email"], #landing-section input[type="number"] {
+    height: 40px;
 }
 
-
-@media (max-width: 769px) {
-    .needs-validation {
-        width: 100%;
-        margin-left: 15px;
-    }
-
-    .navbar-nav {
-        margin-left: 20px;
-        margin-right: 10px;
-        font-size: 28px;
-    }
-
-    .navbar-brand {
-        font-size: 35px;
-    }
-
-    input[type="text"], select {
-        width: 30%;
-    }
-
-    a:-webkit-any-link {
-        text-decoration: none;
-    }
-
-    #about-section .about-section p {
-        margin-left: 145px;
-    }
-
-    #about-section .mission-section p {
-        margin-left: 105px;
-    }
+#landing-section form {
+    font-size: 35px;
+    margin: 0 auto;
+    padding-left: 550px;
+    background-color: aqua;
 }
 
-
-@media (max-width: 426px) {
-    .needs-validation {
-        width: 100%;
-    }
-
-    .col-md-4, .col-md-6, .col-md-3, .col-12 {
-        margin-left: 10px;
-    }
-
-    .navbar-brand {
-        margin-left: 10px;
-        padding-top: 10px;
-    }
-
-    .navbar-nav {
-        margin-left: 30px;
-        text-decoration: none;
-        padding-top: 25px;
-    }
-
-    .nav-item, ul ul {
-        margin-right: 10px;
-        text-decoration: none;
-        marker: none;
-        font-size: 25px;
-    }
-    
-    .container-fluid {
-        flex-direction: column;
-    }
-
-    .container-fluid .collapse {
-        flex-direction: column;
-    }
-
-    a:-webkit-any-link {
-        text-decoration: none;
-    }
-
-    .Heading h1 {
-        font-size: 28px;
-        width: 70%;
-    }
-
-    .Heading p {
-        font-size: 23px;
-        width: 70%; 
-    }
-
-    .invalid-feedback {
-        display: none;
-    }
-
-    #about-section .about-section p {
-        margin-left: 75px;
-    }
-
-    #about-section .mission-section p {
-        width: 80%;
-        margin-left: 55px;
-    }
+.invalid-feedback {
+    display: none;
 }
+
